# poetry-workspace-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: main.yml
libs/my-library/: pyproject.toml
libs/my-other-library/: pyproject.toml
libs/my-other-library/tests/: test_lib.py
poetry_workspace_plugin/: __init__.py  helpers.py  plugin.py
poetry_workspace_plugin/console/: helpers.py
poetry_workspace_plugin/console/commands/: add.py  build.py  dependees.py  list.py  new.py  remove.py  run.py
tasks/: __init__.py  changelog_check.py  helpers.py  lint.py  release.py  test.py  typecheck.py  verify.py
tests/: test_version.py
tests/console/commands/: conftest.py  constants.py  helpers.py  test_add.py  test_dependees.py  test_fixtures.py  test_list.py  test_new.py  test_remove.py  test_run.py
