[tool.poetry]
name = "my-library"
version = "0.1.0"
description = ""
authors = ["Jack Smith <jack.je.smith@gmail.com>"]
readme = "README.md"
packages = [{include = "my_library"}]

[tool.poetry.dependencies]
python = "^3.9"
my-other-library = {path = "../my-other-library"}
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
